2017-11-01      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-gcc/gcc-consolidation.h:  #include "stringpool.h"

2017-10-30      Gaius Mulley <gaius@gnu.org>

	* gm2/m2.flex:  change linelen to int rather than
          unsigned int, a mismatch found when building for
	  cygwin.

2017-10-04      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs/GetOpt.def:  New file.
	* gm2/gm2-libs/GetOpt.mod:  New file.
	* gm2/gm2-libs/getopt.def:  New file.
	* gm2/gm2-libs-ch/getopt.c:  New file.
	* gm2/el/g-mode.el:  change the Modula-2 comment tag
          to (*!m2pim+gm2*)\n")
	* gm2/gm2-compiler/SymbolKey.def:  (ContainsSymKey)
          New procedure.
	* gm2/gm2-compiler/SymbolKey.mod:  (ContainsSymKey)
          New procedure.
	* gm2/gm2-compiler/ppg.mod:  removed unnecessary
          forward declaration prototypes.  (AddEntry)  New
          procedure.  Use SetOfStop rather than BITSET for
          small sets.  Fix off by one error with setsize.
	* gm2/gm2-libs-iso/RndFile.mod:  correct error message.
	* gm2/tools-src/buildpg:  changes to reflect changes to
	  ppg.mod

2017-07-24      Gaius Mulley <gaius@gnu.org>

	* patches/gcc/6.4.0:  01-patches (New file).
	* patches/gcc/6.4.0:  02-patches (New file).
	* patches/gcc/6.4.0:  03-patches (New file).
	* patches/gcc/6.4.0:  04-patches (New file).
	* patches/gcc/6.4.0:  05-patches (New file).
	* patches/gcc/6.4.0:  06-patches (New file).
	* patches/gcc/6.4.0:  07-patches (New file).
	* patches/gcc/6.4.0:  08-patches (New file).
	* patches/gcc/6.4.0:  09-patches (New file).
	* patches/gcc/6.4.0:  10-patches (New file).
	* patches/gcc/6.4.0:  11-patches (New file).

2017-07-21      Gaius Mulley <gaius@gnu.org>

	* gm2/el/g-mode.el:  updated to include the new SYSTEM data types.
	* gm2/gm2-compiler/M2GCCDeclare.mod:  rename the new types
          CSIZE_T and CSSIZE_T.
	* gm2/gm2-compiler/M2System.def:  introduce the signed type
          CSSIZE_T.
	* gm2/gm2-compiler/M2System.mod:  assign type symbols CSIZE_T